# CannotMax

./: .gitignore  HumanDataCheck.py  arknights.csv  checkpoint.py  data_cleaning.py  data_nanWriter.py  data_washer_new.py  find_monster_zone.py  loadData.py  main.py  pyproject.toml  recognize.py  requirements.txt  roi_selector.py  similar_history_match.py  train.py  val.py  数据打包请运行我.py
models/best_epoch/: scheduler.pth  training_state.json
数据合并并去重/: csv_merge.py
