[project]
name = "cannotmax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.3.56",
    "Pillow>=8.3.1",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "keyboard>=0.13.5",
    "matplotlib>=3.4.3",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.2",
    "yt-dlp>=2023.3.4",
    "psutil>=7.0.0",
    "onnxruntime~=1.21.0",
    "rapidocr~=2.0.7",
    "pyperclip>=1.9.0",
    "loguru>=0.7.3",
    "pyarrow>=20.0.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
